--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "quick": "plop --plopfile build/scaffold/start.js",
-    "start": "cross-env NODE_ENV=development node build/scripts/start --sourcemaps",
+    "start": "cross-env NODE_ENV=development node build/scripts/start --sourcemaps --indir demos",
     "build": "cross-env NODE_ENV=production node build/scripts/compile",
     "test": "npm run test:lint && npm run test:unit",
     "test:unit": "cross-env NODE_ENV=test jest --config ./build/configs/jest.config.js",
