--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "immutable": "^3.8.2",
+    "lodash": "^4.17.5",
     "prop-types": "^15.5.10",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
@@ -41,7 +42,8 @@
     "redux-actions": "^2.2.1",
     "redux-devtools-extension": "^2.13.2",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "storm-react-diagrams": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
